--- a/WebApplication1/Views/Home/Monprofil.cshtml
+++ b/WebApplication1/Views/Home/Monprofil.cshtml
@@ -312,7 +312,7 @@
                                                 <div id="arrow">&#9662;</div>
                                             </div>
 
-                                            <!-- Liste déroulante qui contient des cases à cocher -->
+                                            <!-- Liste déroulante qui contient des cases à cocher essai -->
                                             <div id="joursDropdown" class="dropdown-content" style="display: none;">
                                                 <label><input type="checkbox" value="Lundi" onclick="updateSelectedDays()"> Lundi</label><br>
                                                 <label><input type="checkbox" value="Mardi" onclick="updateSelectedDays()"> Mardi</label><br>
